[project]
authors = [
    {name = "BOOSTRY Co., Ltd.", email = "dev@boostry.co.jp"},
]
requires-python = "==3.13.7"
dependencies = []
name = "ibet-prime-explorer"
version = "0.1.0"
description = "ibet-Prime Terminal UI for Block Chain Explorer"
readme = "README.md"

[project.scripts]
ibet-explorer = "explorer.src.main:app"

[tool.mypy]
python_version = "3.13"
no_strict_optional = true
ignore_missing_imports = true
check_untyped_defs = true
