[project]
authors = [
    {name = "BOOSTRY Co., Ltd.", email = "dev@boostry.co.jp"},
]
requires-python = "==3.12.2"
dependencies = []
name = "ibet-prime-settlement"
version = "0.1.0"
description = "ibet-Prime Settlement CLI"
readme = "README.md"

[project.scripts]
settlement-cli = "settlement.src.main:app"

[tool.mypy]
python_version = "3.12"
no_strict_optional = true
ignore_missing_imports = true
check_untyped_defs = true
